--- a/brainstormer.html
+++ b/brainstormer.html
@@ -1,8 +1,10 @@
 <html>
     <head>
         <title>FTJ Brainstormer</title>
+        <link rel="stylesheet" href="stylesheets/style.css" /> 
         <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
         <script src="lib/jquery.csv-0.7.min.js" type="text/javascript"></script>
+        <script src="lib/array_stuff.js" type="text/javascript"></script>
         <script>
             var spreadsheetURL = "https://docs.google.com/spreadsheet/pub?key=0AmfuCT5xFzgOdEw0OFJ5dS12Z2U5SUpRY3FEV1dRYXc&single=true&gid=0&output=csv"
             // load Google Spredsheat data
@@ -12,47 +14,42 @@
                     type: "GET",
                     url: spreadsheetURL,
                     dataType: "text",
-                    success: function(data) { createElements($.csv.toArrays(data));}
+                    success: function(data) { 
+                        var table = $.csv.toArrays(data).transpose();
+                        for(var i=0; i<table.length; i++) table[i].clean('');
+                        createElements(table);
+                    }
                  });
 
             });
             
-            var toTake = 2; // number of elements to combine
-
             function createElements(table) {
-                var ideaSource = [];
-                for(var row=0; row<table.length; row++) {
-                    // will be displaying entries from first column only
-                    ideaSource.push(table[row][0]);
+                $('#shuffleBtn').show();
+                var brainstorm = function() {
+                    var idea = getIdea(table);
+                    //$("<div id='row'></div>").text(idea).appendTo("#idea");
+                    $("#idea").text(idea);
                 }
-
-                $('#shuffle').click(function() {
-                    var idea = getIdea(ideaSource, toTake);
-                    $("<div id='row'></div>").text(idea).appendTo("#idea");
-                });
+                $('#shuffleBtn').click(brainstorm);
+                brainstorm();
             }
 
-            function getIdea(ideaSource, howMany) {
+            function getIdea(ideaSource) {
                 var a = [];
-                for(var i=0; i<howMany; i++) {
-                    do {
-                        var alreadyExists = false;
-                        var r = Math.floor(Math.random()*ideaSource.length);
-                        var idea = ideaSource[r];
-                        for(var j=0; j<a.length; j++) {
-                            if(a[j]==idea) alreadyExists = true;
-                        }
-                    }
-                    while(alreadyExists);
-                    a.push(idea);
+                for(var row=0; row<3; row++) {
+                    var e = Math.floor(Math.random()*ideaSource[row].clean().length);
+                    a.push(ideaSource[row][e]);
                 }
                 return a.join(' ');
             }
         </script>
     </head>
     <body>
-        <div id='lol'>Loading</div>
+        <h1>Game Design Brainstormer</h1>
+
         <div id='idea'>Loading</div>
-        <input type='button' id='shuffle' value='Lolz'/>
+        <input type='button' id='shuffleBtn' value='Hit me!' style='display:none'/>
+
+        <div id='info'>Enrich the brainstormer by adding your hated genre <a href='https://docs.google.com/spreadsheet/ccc?key=0AmfuCT5xFzgOdEw0OFJ5dS12Z2U5SUpRY3FEV1dRYXc'>here</a></div>
     </body>
 </html>
