--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     <body>
         <h1>Game Design Brainstormer</h1>
 
-        <div id='idea'>Loading</div>
-        <input type='button' id='shuffleBtn' value='Hit me!' style='display:none'/>
+        <div id='idea'>Loading ideas...</div>
+        <a href='#' class='btn' id='shuffleBtn' style='display:none'>Give me another idea!</a>
 
-        <div id='info'>Enrich the brainstormer by adding your hated genre <a href='https://docs.google.com/spreadsheet/ccc?key=0AmfuCT5xFzgOdEw0OFJ5dS12Z2U5SUpRY3FEV1dRYXc'>here</a></div>
+        <div class='footer'>Enrich the brainstormer by adding your hated genre <a href='https://docs.google.com/spreadsheet/ccc?key=0AmfuCT5xFzgOdEw0OFJ5dS12Z2U5SUpRY3FEV1dRYXc'>here</a></div>
     </body>
 </html>
