--- a/index.html
+++ b/index.html
@@ -48,8 +48,35 @@
         <h1>Game Design Brainstormer</h1>
 
         <div id='idea'>Loading ideas...</div>
-        <a href='#' class='btn' id='shuffleBtn' style='display:none'>Give me another idea!</a>
+        <a href='javascript:void()' class='btn' id='shuffleBtn' style='display:none'>Give me another idea!</a>
 
-        <div class='footer'>Enrich the brainstormer by adding your hated genre <a href='https://docs.google.com/spreadsheet/ccc?key=0AmfuCT5xFzgOdEw0OFJ5dS12Z2U5SUpRY3FEV1dRYXc'>here</a></div>
+        <div class='footer'>Powered by YOU! Enrich the brainstormer by adding ideas <a href='https://docs.google.com/spreadsheet/ccc?key=0AmfuCT5xFzgOdEw0OFJ5dS12Z2U5SUpRY3FEV1dRYXc'>here</a></div>
+
+
+        <div class='sharebar'>
+            <div id="fb-root"></div>
+            <script>(function(d, s, id) {
+              var js, fjs = d.getElementsByTagName(s)[0];
+              if (d.getElementById(id)) return;
+              js = d.createElement(s); js.id = id;
+              js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=59444788870";
+              fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'facebook-jssdk'));</script>
+<div id="fb-root"></div>
+            <div class="fb-like" data-href="http://bgr.github.com/brainstormer/" data-send="false" data-layout="button_count" data-width="450" data-show-faces="true"></div>
+
+
+            <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://bgr.github.com/brainstormer/" data-text="#fuckthisjam Game Design Brainstormer:" data-via="_bgr_" data-related="FuckThisJam">Tweet</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+            <span id='fal-icon'><img src='images/fal_16.png' /></span>
+            <div class="g-plusone" data-size="medium"></div>
+            <script type="text/javascript">
+              (function() {
+                var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+                po.src = 'https://apis.google.com/js/plusone.js';
+                var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+              })();
+            </script> 
+        </div>
     </body>
 </html>
